# show

./: .gitignore  README.md
CLIArguments/: CLIArguments.cabal
CLIArguments/src/: CLIArguments.hs  Marshaller.hs  Query.hs
CLIArguments/tests/: Main.hs  TestCLIArguments.hs
IniConfiguration/: IniConfiguration.cabal
IniConfiguration/src/: Decoder.hs  Encoder.hs  IniConfiguration.hs  Manipulation.hs  Types.hs
IniConfiguration/tests/: Main.hs  TestDecoder.hs  TestEncoder.hs  TestIniConfiguration.hs
IniConfiguration/tests/material/: example.ini
IniConfiguration/tests/output/: empty.txt
Show/: Show.cabal
Show/src/: DirectoryFiles.hs  Main.hs
