name: CLIArguments
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright: 2015 Tobias Reinhardt <tobioso92_@hotmail.com>
maintainer: Tobias Rerinhardt
author: Tobias Rerinhardt
data-dir: ""

library
    build-depends: base -any, deepseq >= 1.2.0.0,
                   hspec -any, split -any
    exposed-modules: CLIArguments
    exposed: True
    buildable: True
    hs-source-dirs: src tests
    other-modules: Main TestCLIArguments Marshaller Query

Test-Suite TestCLIArguments
    type:       exitcode-stdio-1.0
    build-depends: base -any, deepseq -any,
                   hspec -any, split -any
    main-is: Main.hs
    hs-source-dirs: src tests
    other-modules: Main TestCLIArguments Marshaller Query CLIArguments
