name: Show
version: 0.0.1
cabal-version: >=1.8
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright: 2015 Tobias Reinhardt <tobioso92_@hotmail.com>
maintainer: Tobias Reinhardt
description:
author: Tobias Reinhardt
data-dir: ""

executable show
    build-depends: base -any, CLIArguments -any,
                   IniConfiguration -any, regex-compat -any,
                   directory -any, process -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Main DirectoryFiles
